homework-5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-service-ingress
  #  namespace: monitoring
  labels:
    name: otus-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-service
                port:
                  number: 80
